Fixed a missing gap

--- a/CSS/projects.css
+++ b/CSS/projects.css
@@ -32,6 +32,7 @@ html {
     padding: 0px 64px;
     justify-content: space-between;
     margin-top: 25px;
+    gap: 25px;
 }
 
 .projects-nav {
@@ -84,7 +85,6 @@ html {
 }
 
 .projects-header {
-    /* margin-left: 20px; */
     /* height: 500px; */
     background-color: rgb(0,0,0,0.5);
 
@@ -105,7 +105,6 @@ html {
 }
 
 .projects-section {
-    /* margin-left: 20px; */
     background-color: rgb(0,0,0,0.5);
     text-shadow: none;
     border-radius: 20px;
